# SnowflakeSolutions

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  ai_sdlc_system_design.md  branching.md  commands.txt  dbclode.md  docker-compose.yml  nudge-engine-design.md  nudge_engine_design.md  snowflake_branching_diagrams.md  snowflake_branching_diagrams_v1.md  snowflake_cicd_pipeline.md
.github/: README.md  SCHEMACHANGE_DEPLOYMENT.md  SETUP-COMMANDS.sh  deployment-config.yml
.github/scripts/: deploy.sh
.github/workflows/: snowflake-deployment-legacy.yml  snowflake-deployment.yml  snowflake-schemachange-deployment.yml  streamlit-app-deployment.yml  streamlit-terraform-deployment.yml
Account/snowflake/: 02_sample_data.sql  SNOWFLAKE_PERFORMANCE_GUIDE.md  end_to_end_workflow_test.sql  snowflake_ecs_integration.sql  test_ecs_integration.sql  workflow_execution_test.sql
Account/snowflake/processed_data/procedure/: stored_procedures.sql
Account/snowflake/processed_data/table/: tables.sql
Account/snowflake/raw_data/: clustering_optimization.sql  comments.sql  data_pipeline_streams.sql  tables.sql  task_management.sql
Account/snowflake/raw_data/table/: tables.sql
Account/snowflake/schemas/: 00_database_and_warehouse.sql
Account/snowflake/schemas/processed_data/: data_pipeline_procedures.sql
Account/snowflake/schemas/raw_data/: clustering_optimization.sql  data_pipeline_management.sql  data_pipeline_tasks.sql  pipeline_monitoring_procedures.sql  stored_procedures.sql  tasks_and_streams.sql
Customer/snowflake/monitoring/: stored_procedures.sql  tables.sql
aws-infrastructure/: docker-compose.yml
aws-infrastructure/ecs-services/: report-service.json  streamlit-app.json
aws-infrastructure/ecs-task-definitions/: report-service-task.json  streamlit-app-task.json
aws-infrastructure/streamlit-ecs/: cloudformation-template.yml  deploy.sh
aws-infrastructure/streamlit-ecs/terraform/: Makefile  README.md  backend.tf  data.tf  deploy.sh  locals.tf  main.tf  outputs.tf  terraform.tf  validate.sh  variables.tf  versions.tf
aws-infrastructure/streamlit-ecs/terraform/environments/: dev.backend  prod.backend  staging.backend
docs/: aws-commands-reference.md  aws-deployment-guide.md  end-to-end-workflow-results.md  git-integration-setup.md  jinja-template-examples.md  quick-reference.md  streamlit-deployment-summary.md  streamlit-ecs-deployment-guide.md  troubleshooting-guide.md
python-report-service/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml
scripts/: get-service-url.sh  validate-docker-security.sh
shared/snowflake/: snowflake_tasks.sql  test_ecs_integration.sql
shared/snowflake/foundation/: 00_database_and_warehouse.sql
shared/snowflake/reporting/view/: views.sql
shared/snowflake/schemas/: permissions.sql
sql/: 02_sample_data.sql  DATA_PIPELINE_GUIDE.md  deploy_order.md  end_to_end_workflow_test.sql  snowflake_tasks.sql  workflow_execution_test.sql
sql/schemas/: permissions.sql
sql/schemas/processed_data/: stored_procedures.sql  tables.sql
sql/schemas/raw_data/: comments.sql  data_pipeline_management.sql  data_pipeline_streams.sql  pipeline_monitoring_procedures.sql  tables.sql  task_management.sql
sql/schemas/reporting/: views.sql
streamlit-app/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml  requirements.txt  streamlit-task-definition.json
streamlit-app/.streamlit/: config.toml
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
