[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowflake-cortex-analyst-app"
version = "1.0.0"
description = "Modern Streamlit app with Snowflake Cortex Analyst natural language query interface"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Analytics Team", email = "analytics@company.com"}
]
keywords = ["snowflake", "cortex", "analyst", "streamlit", "nlp", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Streamlit and web framework
    "streamlit>=1.28.0,<2.0",
    "streamlit-option-menu>=0.3.6,<1.0",
    "streamlit-extras>=0.3.5,<1.0",
    
    # Database connectivity
    "snowflake-connector-python>=3.6.0,<4.0",
    "snowflake-snowpark-python>=1.11.0,<2.0",
    "pandas>=2.1.4,<3.0",
    
    # Data visualization
    "plotly>=5.17.0,<6.0",
    "altair>=5.1.0,<6.0",
    
    # UI components and styling
    "streamlit-toggle-switch>=1.0.2,<2.0",
    "streamlit-card>=0.0.5,<1.0",
    "streamlit-lottie>=0.0.5,<1.0",
    
    # AWS services (for ECS deployment)
    "boto3>=1.34.0,<2.0",
    "botocore>=1.34.0,<2.0",
    
    # Additional utilities
    "python-dotenv>=1.0.0,<2.0",
    "pydantic>=2.5.0,<3.0",
    "httpx>=0.25.2,<1.0",
    "cachetools>=5.3.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/company/snowflake-solutions"
Documentation = "https://docs.company.com/cortex-analyst-app"
Repository = "https://github.com/company/snowflake-solutions"
Issues = "https://github.com/company/snowflake-solutions/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["cortex_analyst_app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "snowflake.*",
    "plotly.*",
    "altair.*",
]
ignore_missing_imports = true